--- a/app/src/main/res/layout/activity_add_tour_admin.xml
+++ b/app/src/main/res/layout/activity_add_tour_admin.xml
@@ -137,7 +137,7 @@
                         android:focusable="false"
                         android:clickable="true"
                         android:inputType="none"
-                        android:drawableEnd="@drawable/ic_account"
+                        android:drawableEnd="@drawable/ic_place"
                         android:drawablePadding="8dp"
                         android:padding="16dp"
                         android:textSize="16sp"
