--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="nav_item_background">#E5E7EB</color>
     <color name="star_color">#FFCA28</color>
     <color name="purple_700">#7B1FA2</color>
+    <color name="purple_200">#BB86FC</color>
     <color name="primary_light">#3B82F6</color>
     <color name="primary_dark">#1E3A8A</color>
     <color name="success">#10B981</color>
@@ -54,5 +55,7 @@
     <!-- Overlay -->
     <color name="overlay_dark">#1A000000</color>
     <color name="overlay_light">#0DFFFFFF</color>
+    <color name="primaryColor">#7B00FF</color>
+    <color name="secondaryColor">#FF7C00</color>
 
 </resources>
