--- a/app/src/main/res/layout/item_admin_report.xml
+++ b/app/src/main/res/layout/item_admin_report.xml
@@ -13,6 +13,12 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <com.denzcoskun.imageslider.ImageSlider
+            android:id="@+id/imageSlider"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginBottom="8dp" />
+
         <TextView
             android:id="@+id/tvTourName"
             android:layout_width="wrap_content"
