--- a/app/src/main/res/layout/activity_customer_favorite_tours.xml
+++ b/app/src/main/res/layout/activity_customer_favorite_tours.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#F8FAFC"
-    tools:context=".activity.CustomerFavoriteToursActivity">
+    tools:context=".activity.customer.CustomerFavoriteToursActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarFavoriteTours"
