--- a/app/src/main/res/layout/activity_customer_reviews.xml
+++ b/app/src/main/res/layout/activity_customer_reviews.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".activity.CustomerReviewsActivity">
+    tools:context=".activity.customer.CustomerReviewsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayoutReviews"
