--- a/app/src/main/res/layout/activity_customer_tour_detail.xml
+++ b/app/src/main/res/layout/activity_customer_tour_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".activity.CustomerTourDetailActivity">
+    tools:context=".activity.customer.CustomerTourDetailActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayoutCustomerDetail"
