--- a/app/src/main/res/layout/fragment_admin_invitations.xml
+++ b/app/src/main/res/layout/fragment_admin_invitations.xml
@@ -10,12 +10,12 @@
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="📋 Danh sách lời mời hướng dẫn viên"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center"
         android:layout_marginBottom="12dp"
-        android:textColor="#000000" />
+        android:gravity="center"
+        android:text="📋 Danh sách lời mời hướng dẫn viên"
+        android:textColor="#816161"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerInvitationsAdmin"
