--- a/app/src/main/res/layout/fragment_admin_payments.xml
+++ b/app/src/main/res/layout/fragment_admin_payments.xml
@@ -28,9 +28,9 @@ STRUCTURE:
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Lịch sử giao dịch"
+            android:textColor="#D71818"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="#000000" />
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- DANH SÁCH GIAO DỊCH: ListView hoặc RecyclerView -->
