--- a/app/src/main/res/layout/item_admin_invitation.xml
+++ b/app/src/main/res/layout/item_admin_invitation.xml
@@ -1,25 +1,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="12dp">
 
-    <TextView
-        android:id="@+id/tvGuideName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hướng dẫn viên: "
-        android:textStyle="bold" />
+    <ImageView
+        android:id="@+id/ivAvatar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="12dp"
+        android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/tvTourName"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Tour: " />
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvStatus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Trạng thái: " />
+        <TextView
+            android:id="@+id/tvGuideName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Hướng dẫn viên: "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvTourName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tour: " />
+
+        <TextView
+            android:id="@+id/tvStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Trạng thái: " />
+    </LinearLayout>
+
 </LinearLayout>
